--- a/index.html
+++ b/index.html
@@ -37,22 +37,19 @@
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
-   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <b class="hover-title">ANNE 
-    <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div></b>
-    <i>!</i> 
-    <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
-   
+   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2>
+    <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
+  <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
+  <p style="font-family:poppins;font-size:20px; line-height: 0.8">professional procrastinator (she/her)</p>
 
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a <mark style="background-color: #F7B5CA;
-  color: black;">criminal justice major</mark> in college to eventually establish a career in cybercriminal law.
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
     i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
-      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to <mark style="background-color: #F7B5CA; line-height: 0.8;
-  color: black;">win an ipad</mark> so i can start using goodnotes for cuter handwritten digital notes :)
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to win an ipad so i can start using goodnotes for cuter handwritten digital notes :)
       <br> 
       <br>
-      i'm <b class="under">currently working on</b> hack club # arcade hours, my hc scrapbook projects (for onboard pcbs, fraps 3d dev, sprig games, bin circuits and bobadrops webdev) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
+      i'm <b class="under">currently working on</b> hack club # arcade hours, my hc scrapbook projects (for <s>onboard pcbs</s>, <s>fraps 3d dev</s>, sprig games, bin circuits, blot art with code and <s>webdev for boba</s>) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
       these include my music ventures since i've been trying to get into music production (using ableton) and am currently <mark style="background-color: #F7B5CA;
   color: black;">experimenting with visual synth and different styles</mark> to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
