--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2>
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
-  <p style="font-family:poppins;font-size:20px; line-height: 0.8">professional procrastinator (she/her)</p>
+  <p style="font-family:poppins;font-size:20px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator (she/her)</p>
 
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
