--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2>
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
-  <p style="font-family:poppins;font-size:20px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator (she/her)</p>
+  <p style="font-family:poppins;font-size:19px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator and yapper • sheher</p>
 
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
@@ -50,12 +50,13 @@
       <br> 
       <br>
       i'm <b class="under">currently working on</b> hack club # arcade hours, my hc scrapbook projects (for <s>onboard pcbs</s>, <s>fraps 3d dev</s>, sprig games, bin circuits, blot art with code and <s>webdev for boba</s>) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
-      these include my music ventures since i've been trying to get into music production (using ableton) and am currently <mark style="background-color: #F7B5CA;
-  color: black;">experimenting with visual synth and different styles</mark> to try to figure out what suits "me" (aka my brand, i guess).
+      these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
+      <!-- <mark style="background-color: #F7B5CA; color: black;"></mark>  -->
+  
       <br><br>
       i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
-      i love listening to taylor swift, reading feminist theory, watching true crime documentaries and consuming and creating media (films, books, music, games etc.). i try to keep up with latest pop culture trends, am into basic designing stuff; enjoy indie music, playing the piano, baking cakes and learning foreign languages. i chug like twelve cans of diet coke and energy drinks in a day and love pairing pizza or chinese takeout dinner with a classic film or murder mystery. finally, i love procrastinating, daydreaming, yapping about irrelevant shit, crying my eyes out and aimlessly scrolling on tiktok till i start feeling physically sick (yay!)
+      i love listening to taylor swift, reading feminist theory, watching true crime documentaries and consuming and creating media (films, books, music, games etc.). i try to keep up with latest pop culture trends, am into basic designing stuff; enjoy indie music, playing the piano, baking sugar-free cakes and learning foreign languages. i like trying out different caffeinated beverages and trying to recreate them to perfection at home. i love italian/chinese food, seafood and desserts; my favorites include honey chilli potatoes, red sauce pasta, barbequed pizza with corn or pineapple, chilli garlic noodles, butter chicken, and brownies. i chug like ten cans of diet coke on top of my daily coffee consumption and love pairing takeout dinner with a classic film or murder mystery. 
       <br><br>
       
       you can also find me on <a href="pinterest.com/4noushkabh" style="color:black;">pinterest</a>, goodreads, <a href="github.com/arsoninstigator" style="color:black;">github</a>, letterboxd or spotify. feel free to ask me for my socials or contact me via <a href="mailto:arsoninstigator@proton.me" style="color:black;">email</a>, discord or <a href="https://hackclub.slack.com/team/U07BBK4KHUK" style="color:black;">slack</a> and i'll get back to you as soon as possible. </div>
