--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2>
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
-  <p style="font-family:poppins;font-size:19px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator and yapper • sheher</p>
+  <!-- <p style="font-family:poppins;font-size:19px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator and yapper • sheher</p> -->
 
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
@@ -54,7 +54,7 @@
       <!-- <mark style="background-color: #F7B5CA; color: black;"></mark>  -->
   
       <br><br>
-      i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
+      i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law. i <b class="under"> want to learn </b> about microcontrollers, embedded systems, coding in assembly and programming with micropython.
       <br><br>
       i love listening to taylor swift, reading feminist theory, watching true crime documentaries and consuming and creating media (films, books, music, games etc.). i try to keep up with latest pop culture trends, am into basic designing stuff; enjoy indie music, playing the piano, baking sugar-free cakes and learning foreign languages. i like trying out different caffeinated beverages and trying to recreate them to perfection at home. i love italian/chinese food, seafood and desserts; my favorites include honey chilli potatoes, red sauce pasta, barbequed pizza with corn or pineapple, chilli garlic noodles, butter chicken, and brownies. i chug like ten cans of diet coke on top of my daily coffee consumption and love pairing takeout dinner with a classic film or murder mystery. 
       <br><br>
