--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
-   <h2 style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2>
+
+   <!-- <h2 style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2> -->
+
+   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">Hi, I'm Anne</div>
+   <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div>
+
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
   <!-- <p style="font-family:poppins;font-size:19px; line-height:0; padding: 0px; margin: 0px;">professional procrastinator and yapper • sheher</p> -->
