--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- <br><br> -->
     i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
-      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and organize my life using notion templates and widgets to aesthetic-ize my digital space to boost productivity. i'm hoping to win an ipad for #arcade so i can use goodnotes to make cuter handwritten digital notes :)
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards, create trackers for daily habits/personal finance and organize my life using notion templates and widgets to aesthetic-ize my digital space to boost productivity. i'm hoping to win an ipad through hack club #arcade so i can use goodnotes to make cuter and more accessible handwritten digital notes :)
       <br> 
       <br>
       i'm <b class="under">currently working on</b> hack club # arcade hours, my hc scrapbook projects (for <s>onboard pcbs</s>, <s>fraps 3d dev</s>, sprig game console, bin circuits, blot art with code and <s>webdev for boba</s>) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related. 
