--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
    <!-- <h2 style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2> -->
 
-   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:17px;">[and i use she her pronouns]</span>
+   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:17px;">she her</span>
   </b></div>
    <div class="hover-image"><img data-src="images/me.png" src ="images/me.png" style="width: 130px; height: 130px;"></div>
 
