--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
   </div> -->
 </div>
 
-  
+<a href="https://alvaromontoro.com/blog/68009/lgbtq-flags-coded-in-css" target="_blank"></a>
+<article>
+  <section>
+    <div class="flag bisexual" role="img" aria-label="Bisexual Pride Flag. Three horizontal lines Fuchsia, Pink, and Blue. The middle one half the size of the others."></div>
+  </section>
+</article>
+
 <div class="aligning" style="padding: 20px 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     <img src="images/homeart.jpg" alt="art" style="height:490px;">
+    <div class="flag icon bisexual"></div>
   </div>
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
