--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     <img src="images/homeart.jpg" alt="art" style="height:490px;">
-    <article>
+    <!-- <article>
       <section>
     <div class="flag icon bisexual"></div>
       </section>
-    </article>
+    </article> -->
   </div>
   <div class="column2" style="background-color:#fffff">
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
@@ -45,7 +45,7 @@
 
    <!-- <h2 style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2> -->
 
-   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:18px;">she!her</span>
+   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:19px;">sheher</span>
   </b></div>
    <div class="hover-image"><img data-src="images/me.png" src ="images/me.png" style="width: 130px; height: 130px;"></div>
 
