--- a/toss.html
+++ b/toss.html
@@ -33,6 +33,9 @@
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     <img src="images/favicon.png" alt="art" style="height:340px; text-align:left">
+    <p style="font-family:poppins; line-height: 0.4; font-size:25px; padding: 0px; margin: 0px">@arsoninstigator</p>
+    <p style="font-family:poppins;font-size:21px; line-height: 0.9; padding-top:0px; ">professional procrastinator</p>
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9; padding-top:0px; ">multimedia artist</p>
     <!-- <article>
       <section>
     <div class="flag icon bisexual"></div>
