--- a/toss.html
+++ b/toss.html
@@ -32,7 +32,7 @@
   <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
-    <img src="images/monet.jpg" alt="art" style="height:360px; text-align:right">
+    <img src="images/monet.jpg" alt="art" style="width:360px; text-align:right">
     <!-- <p style="font-family:poppins; line-height: 0.4; font-size:25px; padding: 0px; margin: 0px">@arsoninstigator</p>
     <p style="font-family:poppins;font-size:21px; line-height: 0.9; padding-top:0px; ">professional procrastinator</p>
     <p style="font-family:poppins;font-size:16px; line-height: 0.9; padding-top:0px; ">multimedia artist</p> -->
