--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
 </div>
 </div>
 
+<footer>
+  <p>made with a lot of rage (❤) by anne<br>
+  <a href="mailto:arsoninstigator@proton.me">ps. not sponsored by prozac</a></p>
+</footer>
+
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('fairy777', {
