--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 </div>
 
-<footer>
+<footer class="footer">
   <p>made with a lot of rage (❤) by anne<br>
   <a href="mailto:arsoninstigator@proton.me">ps. not sponsored by prozac</a></p>
 </footer>
