--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 
 
-<footer element id="footer">
+<footer class="footer">
   <p>made with a lot of rage (❤) by anne<br>
   <a href="mailto:arsoninstigator@proton.me">ps. not sponsored by prozac</a></p>
 </footer>
