--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
 
 <footer id="footer">
-  <p style="line-height: 0.9; font-size: 16px; color: white;">made with a lot of rage (❤) by anne<br>
+  <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
+    made with a lot of rage (❤) by anne<br>
   <a href="mailto:arsoninstigator@proton.me">ps. not sponsored by prozac</a></p>
 </footer>
 
