--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
     made with a lot of rage (❤) by anne<br>
-  <a href="mailto:arsoninstigator@proton.me">ps. not sponsored by prozac</a></p>
+  <a href="mailto:arsoninstigator@proton.me" style="text-decoration: none">ps. not sponsored by prozac</a></p>
 </footer>
 
 
