--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
   });
 </script>
 
-<footer id="footer">
+<footer>
+  <div class="footers">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
     made with a lot of rage (❤) by anne<br>
   <a href="mailto:arsoninstigator@proton.me" style="color: white;">ps. not sponsored by prozac</a></p>
+</div>
 </footer>
 
 
