--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
   });
 </script>
 
-<footer>
-  <div class="footers">
+<footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
-    made with a lot of rage (❤) by anne<br>
-  <a href="mailto:arsoninstigator@proton.me" style="color: white;">ps. not sponsored by prozac</a></p>
-</div>
+    made with a lot of rage (❤) by
+  <a href="mailto:arsoninstigator@proton.me" style="color: white;">anne</a></p>
+
 </footer>
 
 
