--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
     made with a lot of rage (❤) by
-  <a href="mailto:arsoninstigator@proton.me" style="color: white;">anne</a></p>
+  <a href="mailto:arsoninstigator@proton.me" style="color: white; text-decoration: none;">anne</a></p>
 
 </footer>
 
