--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 
 
-<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('fairy777', {
     'type': 'floating-chat',
@@ -95,12 +95,12 @@
     'floating-chat.donateButton.background-color': '#edb5b6',
     'floating-chat.donateButton.text-color': '#323842'
   });
-</script>
+</script> -->
 
 <footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
     made with a lot of rage (❤) by
-  <a href="mailto:arsoninstigator@proton.me" style="color: white; text-decoration: none;">anne</a></p>
+  <a href="mailto:arsoninstigator@proton.me" style="color: white;">anne</a></p>
 
 </footer>
 
