--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div class="aligning" style="padding: 20px 0;">
+<div class="aligning" style="padding: 20px 0 0 0;">
 <div class="row">
   <div class="column" style="background-color:#fffff">
 <!--     <img src="images/one-funko.png" alt="funko pop that looks like me" style="height:450px;"> -->
@@ -87,7 +87,7 @@
 </div>
 
 
-<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('fairy777', {
     'type': 'floating-chat',
@@ -95,7 +95,7 @@
     'floating-chat.donateButton.background-color': '#edb5b6',
     'floating-chat.donateButton.text-color': '#323842'
   });
-</script> -->
+</script>
 
 <footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
