--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="column right"> -->
 <p id="hovering" style="font-family:poppins; line-height: 0.9; text-align:right;">
-  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="https://scrapbook.hackclub.com/anne/" style="color:white;">projects</a> | <a href="#contactme" style="color:white;">contact me &#128140;</a></p>
+  <a href="#" style="color:white;">about me</a> | <a href="#" style="color:white;">skills</a> | <a href="https://scrapbook.hackclub.com/anne/" style="color:white;">projects</a> | <a href="mailto:arsoninstigator@proton.me" style="color:white;">contact me &#128140;</a></p>
 <!-- </div> 
   </div> -->
 </div>
@@ -100,7 +100,7 @@
 <footer id="footer">
   <p style="line-height: 0.9; font-size: 16px; color: white; text-decoration: none;">
     made with a lot of rage (❤) by
-  <a href="mailto:arsoninstigator@proton.me" style="color: white;">anne</a></p>
+  <a href="https://github.com/arsoninstigator" style="color: white;">anne</a></p>
 
 </footer>
 
