--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 </script>
 
 <footer id="footer">
-  <p style="line-height: 0.8; font-size: 14px; color: white; text-decoration: none;">
-    made with a lot of rage (❤) by
+  <p style="line-height: 0.8; font-size: 15px; color: white; text-decoration: none;">
+    made with a lot of rage ❤ by
   <a href="https://github.com/arsoninstigator" style="color: white;">anne</a></p>
 
 </footer>
