--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!-- <mark style="background-color: #F7B5CA; color: black;"></mark>  -->
   
       <br><br>
-      i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i'm also doing c++ and java at school but i'm falling behind since it seems much more complex. i'm transitioning to linux and i'm working my way around it while reading up on data privacy & cyberspace law. 
+      i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i'm also doing c++ and java at school but it seems much more complex. i'm transitioning to linux and i'm working my way around it while reading up on data privacy & cyberspace law. 
       <br><br>
       i <b class="under"> want to learn </b> about osint, lower level programming languages, microcontrollers, embedded systems, machine learning and gameplay mechanics. i'm getting used to making pixel art and want to expand my setup to include some sort of tablet or drawing tool (like a wacom for art) since i draw with my fingers on my phone for now.
       <br><br>
