--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
    <!-- <h2 style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px">HI, I'M <b class="hover-title">ANNE </b><i>!</i></h2> -->
 
-   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:19px;">sheher</span>
+   <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> <span style="color:#c4c2c2; font-size:19px;">hall of fame #1 unorganized</span>
   </b></div>
    <div class="hover-image"><img data-src="images/me.png" src ="images/me.png" style="width: 130px; height: 130px;"></div>
 
@@ -81,7 +81,7 @@
       i love dyeing my hair ten times a week, doing draculaura cosplay and keeping up with pop culture trends. i also like 2000s tech, the fall, doing silly crafts & collecting various small trinkets.
       <!-- i love italian/chinese food, seafood and desserts; my favorites include honey chilli potatoes, red sauce pasta, barbequed pizza with corn or pineapple, chilli garlic noodles, butter chicken, and brownies. i chug like ten cans of diet coke on top of my daily coffee consumption and love pairing takeout dinner with a classic film or murder mystery.  -->
     
-      lastly, i'm a <b>professional procrastinator</b> and love yapping about random unimportant things or hyperfixating on morbid stuff. 
+      lastly, i'm a <b>professional procrastinator</b> (executive disfunction is truly my arch nemesis) and love yapping about random unimportant things or hyperfixating on morbid stuff. 
       <!-- i spend most of my time napping, planning to take a nap, dilly-dallying, snacking or crying my eyes out. i reserve the rest of my limited time doomscrolling aimlessly through tiktok/twitter discourses till i start feeling sick.  -->
       <br><br>
       you can also find me on pinterest, reddit, tumblr, stats.fm and spotify.
