--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amethysta&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
-<link rel="shortcut icon" href="images/logo.svg"  type="image/png"/>
+<link rel="shortcut icon" href="images/favicon.png"  type="image/png"/>
   <!-- <link rel="shortcut icon" href="images/gradient.jpg"  type="image/jpg"/> -->
 <!-- <link rel="shortcut icon" href="images/logo.svg"  type="image/jpg"/> -->
 <link rel="stylesheet" href="style.css">
