--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amethysta&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,800,800italic,700,700italic,900,900italic" rel="stylesheet" type="text/css"/>
-<link rel="shortcut icon" href="images/v2.png"  type="image/png"/>
+<link rel="shortcut icon" href="images/portfolio.png"  type="image/png"/>
   <!-- <link rel="shortcut icon" href="images/gradient.jpg"  type="image/jpg"/> -->
 <!-- <link rel="shortcut icon" href="images/logo.svg"  type="image/jpg"/> -->
 <link rel="stylesheet" href="style.css">
@@ -54,7 +54,7 @@
    <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> 
 <!--      <span style="color:#c4c2c2; font-size:19px;">hall of fame #1 unorganized</span> -->
   </b></div>
-   <div class="hover-image"><img data-src="images/me.png" src ="images/me.png" style="width: 130px; height: 130px;"></div>
+   <div class="hover-image"><img data-src="images/v2.png" src ="images/v2.png" style="width: 130px; height: 130px;"></div>
 
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
