--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     
 <!--     <img src="images/monet.jpg" alt="art" style="width:360px; text-align:right"> -->
-<img src="images/photo.jpeg" alt="art" style="width:340px; text-align:right">
+<img src="images/me.png" alt="art" style="width:340px; text-align:right">
     
     <!-- <p style="font-family:poppins; line-height: 0.4; font-size:25px; padding: 0px; margin: 0px">@arsoninstigator</p>
     <p style="font-family:poppins;font-size:21px; line-height: 0.9; padding-top:0px; ">professional procrastinator</p>
@@ -54,7 +54,8 @@
    <div class="hover-title" style="font-family:poppins; line-height: 0.4; font-size:30px; padding: 0px; margin: 0px"><b>HI, I'M ANNE <i>!</i> 
 <!--      <span style="color:#c4c2c2; font-size:19px;">hall of fame #1 unorganized</span> -->
   </b></div>
-   <div class="hover-image"><img data-src="images/v2.png" src ="images/v2.png" style="width: 130px; height: 130px;"></div>
+<!--    <div class="hover-image"><img data-src="images/v2.png" src ="images/v2.png" style="width: 130px; height: 130px;"></div> -->
+    <div class="hover-image"><img data-src="images/v2.png" src ="images/v2.png" style="height: 90px;"></div>
 
     <!-- <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div> -->
   <!-- <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span> -->
