--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- <img src="images/38c1b424258b6a5d7bdc69600d73264b.jpg" alt="art" style="height:475px;"> -->
     
 <!--     <img src="images/monet.jpg" alt="art" style="width:360px; text-align:right"> -->
-<img src="images/pfp.jpg" alt="art" style="width:340px; text-align:right">
+<img src="images/monet.jpg" alt="art" style="width:340px; text-align:right">
 <!-- <img src="images/v2.png" alt="art" style="width:300px; text-align:right"> -->
     
     <!-- <p style="font-family:poppins; line-height: 0.4; font-size:25px; padding: 0px; margin: 0px">@arsoninstigator</p>
