--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
                                 <div class="inner">
                                    <p id="text03">
                                             <span class="p" style="line-height:0.875">
-                                                <strong>what im working on:</strong> my #infill printer & hackboard
-                                                <strong> future projects include:</strong> <br>
-                                                - custom cnc / pen plotter (like blot maybe?) <br>
-                                                - cyberdeck
-                                            </span>
+                                                <strong>what im working on:</strong> my #infill printer & hackboard <br><br>
+                                                    <span style="text-align: left">
+                                                        <strong> future projects:</strong> <br>
+                                                        - custom cnc / pen plotter (like blot maybe?) <br>
+                                                        - cyberdeck
+                                                    </span>
+                                                </span>
                                    </p>
                                 </div>
                             </div>
