--- a/index.html
+++ b/index.html
@@ -136,11 +136,23 @@
                                    <p id="text03">
                                             <span class="p" style="line-height:0.875">
                                                 <strong>what im working on:</strong> my #infill printer & hackboard <br><br>
-                                                    <span style="text-align: left">
+                                                    <span style="text-align:left">
                                                         <strong> future projects:</strong> <br>
                                                         - custom cnc / pen plotter (like blot maybe?) <br>
                                                         - cyberdeck
                                                     </span>
+                                                </span>
+                                   </p>
+                                </div>
+                            </div>
+                        </div>
+
+                         <div id="container01" class="container default">
+                            <div class="wrapper">
+                                <div class="inner">
+                                   <p id="text03">
+                                            <span class="p" style="line-height:0.875">
+                                                <i>ad stra per aspera ₍ᐢ. .ᐢ₎ ₊˚⊹♡</i>
                                                 </span>
                                    </p>
                                 </div>
