--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                     </header>
                     -->
                     <section id="one-section">
+                        <div id="container01" class="container default">
+                            <div class="wrapper">
+                                <div class="inner">
+                                   <p id="text03">
+                                        <i>ad astra per aspera ₍ᐢ. .ᐢ₎ ₊˚⊹♡</i>
+                                   </p>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
                         <div id="container02" class="style1 container columns">
                             <div class="wrapper">
                                 <div class="inner">
@@ -147,17 +157,6 @@
                             </div>
                         </div>
 
-                         <div id="container01" class="container default">
-                            <div class="wrapper">
-                                <div class="inner">
-                                   <p id="text03">
-                                            <span class="p" style="line-height:0.875">
-                                                <i>ad stra per aspera ₍ᐢ. .ᐢ₎ ₊˚⊹♡</i>
-                                                </span>
-                                   </p>
-                                </div>
-                            </div>
-                        </div>
 
                         
                     </section>
