--- a/index.html
+++ b/index.html
@@ -146,13 +146,14 @@
                                    <p id="text03">
                                             <span class="p" style="line-height:0.875">
                                                 <strong>what im working on:</strong> my #infill printer & hackboard <br><br>
-                                                    <span style="text-align:left">
-                                                        <strong> future projects:</strong> <br>
-                                                        - custom cnc / pen plotter (like blot maybe?) <br>
-                                                        - cyberdeck
-                                                    </span>
-                                                </span>
+                                            </span>
                                    </p>
+                                   <p style="text-align:left; line-height:0.875">
+                                    <strong> future projects:</strong> <br>
+                                    - custom cnc / pen plotter (like blot maybe?) <br>
+                                    - cyberdeck
+                                   </p>
+
                                 </div>
                             </div>
                         </div>
