--- a/index.html
+++ b/index.html
@@ -148,10 +148,12 @@
                                                 <strong>what im working on:</strong> my #infill printer & hackboard <br><br>
                                             </span>
                                    </p>
-                                   <p style="text-align:left; line-height:0.875">
+                                   <p id="text17" style="align:left; line-height:0.875">
                                     <strong> future projects:</strong> <br>
-                                    - custom cnc / pen plotter (like blot maybe?) <br>
-                                    - cyberdeck
+                                    - pen plotter <br>
+                                    - cyberdeck <br>
+                                    - cnc aka cricut/dremel style
+                                    - mini projector
                                    </p>
 
                                 </div>
